# switchboards

./: .gitignore  AGENT.md  PROMPT_SCHEMA.md  README.md  demo_human_vs_human.py  pyproject.toml  test_basic.py
inputs/: model_mappings.yml  names.yaml
playbook/: __init__.py  cli.py  game.py  player.py  prompt_manager.py
playbook/adapters/: openrouter_adapter.py
playbook/utils/: logging.py
prompts/: blue_coach.md  blue_lineman.md  blue_operator.md  blue_player.md  red_coach.md  red_lineman.md  red_operator.md  red_player.md  referee.md  umpire.md
prompts/shared/: game_rules.md
switchboard/: __init__.py  cli.py  game.py  player.py  prompt_manager.py
switchboard/adapters/: __init__.py  openrouter_adapter.py
switchboard/utils/: logging.py
tests/: __init__.py  test_game.py  test_metadata_logging.py  test_player_integration.py  test_prompt_hydration.py
